@startuml

title __CONTROLLER's Class Diagram__\n

  namespace com.neliyenn {
    namespace controller {
      class com.neliyenn.controller.BlogController {
          + BlogController()
          + blogForUsername()
      }
    }
  }
  

  namespace com.neliyenn {
    namespace controller {
      class com.neliyenn.controller.BlogErrorController {
          {static} - PATH : String
          + error()
          + error403()
          + getErrorPath()
      }
    }
  }
  

  namespace com.neliyenn {
    namespace controller {
      class com.neliyenn.controller.CommentController {
          + CommentController()
          + commentPostWithId()
          + createNewPost()
      }
    }
  }
  

  namespace com.neliyenn {
    namespace controller {
      class com.neliyenn.controller.HomeController {
          + HomeController()
          + home()
      }
    }
  }
  

  namespace com.neliyenn {
    namespace controller {
      class com.neliyenn.controller.LoginController {
          + login()
      }
    }
  }
  

  namespace com.neliyenn {
    namespace controller {
      class com.neliyenn.controller.PostController {
          + PostController()
          + createNewPost()
          + deletePostWithId()
          + editPostWithId()
          + getPostWithId()
          + newPost()
          - isPrincipalOwnerOfPost()
      }
    }
  }
  

  namespace com.neliyenn {
    namespace controller {
      class com.neliyenn.controller.RegistrationController {
          + RegistrationController()
          + createNewUser()
          + registration()
      }
    }
  }
  

  com.neliyenn.controller.BlogController o-- com.neliyenn.service.PostService : postService
  com.neliyenn.controller.BlogController o-- com.neliyenn.service.UserService : userService
  com.neliyenn.controller.BlogErrorController .up.|> org.springframework.boot.autoconfigure.web.ErrorController
  com.neliyenn.controller.CommentController o-- com.neliyenn.service.CommentService : commentService
  com.neliyenn.controller.CommentController o-- com.neliyenn.service.PostService : postService
  com.neliyenn.controller.CommentController o-- com.neliyenn.service.UserService : userService
  com.neliyenn.controller.HomeController o-- com.neliyenn.service.PostService : postService
  com.neliyenn.controller.PostController o-- com.neliyenn.service.PostService : postService
  com.neliyenn.controller.PostController o-- com.neliyenn.service.UserService : userService
  com.neliyenn.controller.RegistrationController o-- com.neliyenn.service.UserService : userService


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
